force-app/main/default/objects/ClusterModelField__c/ClusterModelField__c.object-meta.xml
<CustomObject>
    <label>Cluster Model Field</label>
    <nameField>
        <displayFormat>CMF-{0000}</displayFormat>
        <label>Cluster Model Field Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cluster Model Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>