force-app/main/default/objects/ClusterModelField__c/fields/DistanceType__c.field-meta.xml
<CustomField>
    <fullName>DistanceType__c</fullName>
    <label>Distance Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Numeric</fullName>
            </value>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>LongText</fullName>
                <label>Long Text</label>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Output</fullName>
                <label>Cluster Result Output</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>