force-app/main/default/objects/ClusterModelField__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>ClusterModel</label>
    <referenceTo>ClusterModel__c</referenceTo>
    <relationshipLabel>Cluster Model Fields</relationshipLabel>
    <relationshipName>ClusterModelFields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>