force-app/main/default/objects/ClusterModelField__c/fields/RelationName__c.field-meta.xml
<CustomField>
    <fullName>RelationName__c</fullName>
    <label>Relation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>